# TrustVar

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: upload.py
docs/: README.md  api.md  components.md  deployment.md  env.example  index.md  metrics.md  overview.md  setup.md
langchain_back/: README.md  main.py  test.py
monitoring/: app_main.py  config.yaml  dataset_management.py  metrics.py  prompts_tasks.py  src.py  tasks.py
runners/: README.md  run.py  run_metrics.py  run_regexp.py  run_rta_queuer.py  task_processor.py
utils/: constants.py  db_client.py  src.py  sync_task.py
